tests/snapshots/run_file__str_len.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/run_file/str_len.hvm
---
Lazy mode:
4

Strict mode:
4
