tests/snapshots/run_file__sum_tree.bend.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/run_file/sum_tree.bend
---
NumScott:
256

Scott:
256
