tests/snapshots/run_file__sum_tree.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/run_file/sum_tree.hvm
---
Lazy mode:

256

Strict mode:

256
