tests/snapshots/run_file__sup_reconstruction.bend.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/run_file/sup_reconstruction.bend
---
λa a
