tests/snapshots/run_file__sup_reconstruction.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/run_file/sup_reconstruction.hvm
---
Lazy mode:
λa a

Strict mode:
λa a
