tests/snapshots/run_file__superposed_is_even.bend.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/run_file/superposed_is_even.bend
---
NumScott:
{{B/T B/F} {B/T B/F}}

Scott:
{{B/T B/F} {B/T B/F}}
