tests/snapshots/run_file__superposed_is_even.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/run_file/superposed_is_even.hvm
---
#0{#1{T F} #2{T F}}
