tests/snapshots/run_file__tagged_lam.bend.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/run_file/tagged_lam.bend
---
[4m[1m[31mErrors:[0m
In tests/golden_tests/run_file/tagged_lam.bend :
[1m- expected:[0m term
[1m- detected:[0m end of input
[0m  2 | [4m[31m [0m
